SERVER-51726 Maintain status code compatibility when main executor is shut down